--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -52,7 +52,20 @@
     "---\n",
     "| Github |\n",
     "| Jupyter Notebooks |\n",
-    "| RStudio |"
+    "| RStudio |\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Data Science Tools |\n",
+    "---\n",
+    "| Github |\n",
+    "| Jupyter Notebooks |\n",
+    "| RStudio |\n",
+    "---"
    ]
   },
   {
